fixed word wrapping

--- a/awx/ui/client/legacy-styles/lists.less
+++ b/awx/ui/client/legacy-styles/lists.less
@@ -78,6 +78,7 @@ table, tbody {
     padding-left: 15px;
     padding-right: 15px;
     border-top:0px!important;
+    word-wrap: break-word;
 }
 
 .List-tableCell.description-column {
